--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -78,4 +78,4 @@
     <span class="badge">{{ cart.totalItems() }}</span>
 </button>
 
-<div class="cart-toast" *ngIf="toast">{{ toast }}</div>
+<!-- <div class="cart-toast" *ngIf="toast">{{ toast }}</div> -->
